# numa_experiment

./: CMakeLists.txt  gen_ckp_and_log.cpp  main.cpp
